# rust-api

./: .gitignore  Cargo.toml
api/: Cargo.toml  Rocket.toml  apiconfig.toml
api/config/: log4rs.yaml
api/public/: index.css
api/src/: main.rs
api/src/communication/: mod.rs  protocols.rs
api/src/database/: auth.rs  mod.rs  processes.rs
api/src/endpoints/: mod.rs
api/src/endpoints/auth/: check_login.rs  login.rs  logout.rs
api/src/endpoints/processes/: create.rs  get_processes.rs  mod.rs  restart.rs  restartpull.rs  start.rs  stop.rs  update.rs
api/src/guards/: cors.rs  githubip.rs  mod.rs
api/src/guards/auth/: auth.rs  cookie.rs  mod.rs  session.rs  user.rs  users.rs
api/src/process_handler/: mod.rs  process.rs
api/src/states/: mod.rs
public/: header.css  index.css
src/: main.rs
src/communication/: mod.rs  protocols.rs
src/database/: processes.rs
src/endpoints/: mod.rs
src/endpoints/auth/: login.rs  logout.rs  mod.rs
src/endpoints/processes/: create.rs  get_processes.rs  github.rs  mod.rs  restart.rs  restartpull.rs  start.rs  stop.rs
src/guards/: githubip.rs
src/process_handler/: mod.rs  process.rs
src/states/: mod.rs  processcomm.rs
src/website/: auth.rs  github.rs  mod.rs  states.rs
src/website/guards/: githubip.rs  mod.rs  timer.rs
src/website/pages/: home.rs  mod.rs
templates/: base.html.tera  index.html.tera  login.html.tera
website/: Dockerfile  Makefile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
website/src/: index.html  proxy.conf.json  styles.scss
website/src/app/: app-routing.module.ts  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
website/src/app/auth/: alreadyauthenticated.ts  auth.module.ts  authenticated.ts
website/src/app/models/: Processes.ts
website/src/environments/: environment.prod.ts  environment.ts
(+40 files in other folders)
