[package]
name = "rust-website"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["handlebars", "tera"]}
crossbeam = "0.8.1"
run_script = "^0.9.0"
ctrlc = { version = "3.0", features = ["termination"] }
rocket_auth = { version = "0.4.0", features = ["sqlx-sqlite"] }
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls" ] }
tokio = { version = "1", features = ["full"] }
either = "1.6.1"
cookie = "0.15"
rocket_contrib = "0.4.2"
toml = "0.5.8"
serde_derive = "1.0.137"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
ip-in-subnet = "0.1"
crossbeam-utils = "0.8.14"
futures = "0.3"