[package]
name = "rust-api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
crossbeam = "0.8.1"
run_script = "^0.9.0"
ctrlc = { version = "3.0", features = ["termination"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" ] }
tokio = { version = "1", features = ["full"] }
either = "1.6.1"
cookie = "0.15"
toml = "0.5.8"
serde_derive = "1.0.137"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.10", features = ["blocking","json"] }
ip-in-subnet = "0.1"
crossbeam-utils = "0.8.14"
anyhow = "1.0"
futures = "0.3"
log4rs = {version = "1.2.0", features = ["rolling_file_appender", "fixed_window_roller", "size_trigger"]}
log = "0.4.17"